Bug 957479.  Make pushState work correctly after document.open().  r=smaug